--- a/index.html
+++ b/index.html
@@ -4,7 +4,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Midas Touch | Unlocking Potentials</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Midas Touch Consult Group | Tech Consultancy Takoradi, Ghana</title>
+    <meta name="title" content="Midas Touch Consult Group | Unlocking Potentials Through Innovation" />
+    <meta name="description" content="Expert tech consultancy in Takoradi, Ghana. Specialized in Web Development, Graphic Design, Data Analytics, Software Engineering, and System Integration. Founded by Ishmael Abakah." />
+    <meta name="keywords" content="Midas Touch, Midas Touch Consult Group, Tech Consultancy Ghana, Web Design Takoradi, Software Development Ghana, Data Analytics, Ishmael Abakah, Philipa Armah, Digital Transformation" />
+    <meta name="author" content="Midas Touch Consult Group" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.midastouchconsultgroup.com" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.midastouchconsultgroup.com" />
+    <meta property="og:title" content="Midas Touch Consult Group | Unlocking Potentials" />
+    <meta property="og:description" content="Transforming visions into reality through high-fidelity engineering and creative strategy. Leading tech consultancy in Ghana." />
+    <meta property="og:image" content="https://img.sanishtech.com/u/d4fdadeac4c7a186738ae2b4cfb01b6e.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.midastouchconsultgroup.com" />
+    <meta property="twitter:title" content="Midas Touch Consult Group | Unlocking Potentials" />
+    <meta property="twitter:description" content="High-end tech consultancy specializing in software development and creative design." />
+    <meta property="twitter:image" content="https://img.sanishtech.com/u/d4fdadeac4c7a186738ae2b4cfb01b6e.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://img.sanishtech.com/u/d4fdadeac4c7a186738ae2b4cfb01b6e.png" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "Midas Touch Consult Group",
+        "image": "https://img.sanishtech.com/u/d4fdadeac4c7a186738ae2b4cfb01b6e.png",
+        "@id": "https://www.midastouchconsultgroup.com",
+        "url": "https://www.midastouchconsultgroup.com",
+        "telephone": "+233534463913",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Takoradi",
+          "addressLocality": "Takoradi",
+          "addressRegion": "Western Region",
+          "postalCode": "00233",
+          "addressCountry": "GH"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 4.8917,
+          "longitude": -1.7519
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "09:00",
+          "closes": "18:00"
+        },
+        "sameAs": [
+          "https://www.facebook.com/share/17FCkHfWdJ/?mibextid=wwXIfr",
+          "https://www.instagram.com/midastouch_cg?igsh=YzljYTk1ODg3Zg=="
+        ],
+        "founder": {
+          "@type": "Person",
+          "name": "Ishmael Abakah"
+        }
+      }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -83,10 +155,8 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
